--- a/Util/TopicDetail.html
+++ b/Util/TopicDetail.html
@@ -6,6 +6,7 @@
     </head>
     <body>
         <div id="container" style="width: 100%;height: 40px; border: 1px solid yellow;"></div>
+        <button onclick="clickMe()">ClickMe</button>
         <p>hello world</p>
         <p>hello world</p>
         <p>hello world</p>
@@ -85,6 +86,9 @@
                 document.getElementById("container").innerHTML = title
                 return "xxxx"
             }
-            </script>
+            function clickMe() {
+                window.webkit.messageHandlers.AppModel.postMessage("1")
+            }
+        </script>
     </body>
 </html>
