--- a/Resource/topic_detail.html
+++ b/Resource/topic_detail.html
@@ -13,10 +13,10 @@
   <div id="app"></div>
   <script type="text/template" id="tpl">
     <div class="header">
-      <img src="<%=author.avatar_url%>" class="avatar"/>
+      <img src="<%=author.avatar_url%>" class="avatar to-user-center" data-loginname="<%=author.loginname%>"/>
       <div class="info">
         <div class="info1">
-          <div class="loginname"><%=author.loginname%></div>
+          <div class="loginname to-user-center" data-loginname="<%=author.loginname%>"><%=author.loginname%></div>
           <div class="tab">
             <% if(tab === 'share') { %>
               分享
@@ -49,10 +49,10 @@
       <% _.each(replies, function(v, i) { %>
         <div class="tap" data-id="<%=v.id%>" data-loginname="<%=v.author.loginname%>">
           <div class="reply">
-            <img src="<%=v.author.avatar_url%>" class="avatar-sm"/>
+            <img src="<%=v.author.avatar_url%>" class="avatar-sm to-user-center" data-loginname="<%=v.author.loginname%>"/>
             <div class="info">
               <div class="info1">
-                <div class="loginname">
+                <div class="loginname to-user-center" data-loginname="<%=v.author.loginname%>">
                   <%=v.author.loginname%>
                   <% if(v.author.loginname === author.loginname){ %>
                     <span class="op">[楼主]</span>
@@ -76,15 +76,31 @@
       var appTpl = _.template(document.getElementById('tpl').innerHTML);
       document.getElementById("app").innerHTML = appTpl(topic.data);
 
+      // 点击回复列表里用户名事件
+      var loginnameDoms = document.getElementsByClassName('to-user-center');
+      for (var iii = 0; iii < loginnameDoms.length; iii++) {
+        (function (index) {
+          var loginname = loginnameDoms[index].getAttribute('data-loginname');
+          loginnameDoms[index].addEventListener('click', function (event) {
+            window.webkit.messageHandlers.AppModel.postMessage(
+              JSON.stringify({ "type": "to_user_center", "loginname": loginname })
+            );
+            event.stopPropagation()
+          }, false);
+        })(iii)
+      }
+
+      // 点击回复列表事件
       var replyDoms = document.getElementsByClassName('tap');
       for (var i = 0; i < replyDoms.length; i++) {
         (function (index) {
           var reply_id = replyDoms[index].getAttribute('data-id');
           var loginname = replyDoms[index].getAttribute('data-loginname');
-          replyDoms[index].addEventListener('click', function () {
+          replyDoms[index].addEventListener('click', function (event) {
             window.webkit.messageHandlers.AppModel.postMessage(
               JSON.stringify({ "type": "click_reply", "reply_id": reply_id, "loginname": loginname })
             );
+            event.stopPropagation()
           }, false);
         })(i)
       }
