修改详情页面内容超链接样式 去掉获取通知失败toast提示

--- a/Resource/topic_detail.html
+++ b/Resource/topic_detail.html
@@ -41,7 +41,9 @@
       <%=title%>
     </div>
     <hr>
-    <div class="content deal-link"><%=content%></div>
+    <div class="content deal-link">
+      <%=content%>
+    </div>
     <div class="panel">
       <%=replies.length%> 回复
     </div>
